--- a/.github/workflows/gas-deploy.yml
+++ b/.github/workflows/gas-deploy.yml
@@ -9,145 +9,162 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Install clasp
-        run: npm i -g @google/clasp
+      - name: Install Google clasp
+        run: npm install -g @google/clasp
 
-      - name: Restore ~/.clasprc.json from Base64
+      - name: Authenticate clasp via .clasprc.json
+        # 將 Base64 字串還原為憑證檔案
         run: |
           echo "${{ secrets.CLASPRC_JSON_B64 }}" | base64 -d > ~/.clasprc.json
           chmod 600 ~/.clasprc.json
-          node -e "JSON.parse(require('fs').readFileSync(process.env.HOME+'/.clasprc.json','utf8')); console.log('OK ~/.clasprc.json')"
+          echo "Restored ~/.clasprc.json"
 
-      - name: Preflight: ID must match URL
+      - name: 檢查部署 ID 與 URL 設置 (Preflight)
         env:
           ID: ${{ vars.GAS_DEPLOY_ID }}
           URL: ${{ vars.GAS_WEBAPP_URL }}
         run: |
-          set -e
-          echo "ID=$ID"
-          echo "URL=$URL"
+          echo "GAS_DEPLOY_ID=$ID"
+          echo "GAS_WEBAPP_URL=$URL"
+          # 確認 Web App URL 中包含部署 ID，避免變數設錯
           if echo "$URL" | grep -Fq "$ID"; then
-            echo "OK: ID is contained in URL"
+            echo "✅ 部署 ID 與 Web App URL 匹配"
           else
-            echo "::error title=Wrong variables::GAS_DEPLOY_ID is not contained in GAS_WEBAPP_URL (likely a Library ID)."
+            echo "::error ::GAS_DEPLOY_ID 與 GAS_WEBAPP_URL 不匹配，請確認填入正確的 Web App 部署 ID。"
             exit 1
           fi
 
-      - name: Create clean .clasp.json (no BOM)
+      - name: 建立 .clasp.json 配置
         env:
           GAS_SCRIPT_ID: ${{ vars.GAS_SCRIPT_ID }}
         run: |
-          node <<'NODE'
+          # 用 Node.js 建立 .clasp.json，寫入 Apps Script 專案 scriptId
+          node <<'EOF'
           const fs = require('fs');
-          const id = (process.env.GAS_SCRIPT_ID || '').trim();
-          if (!id) { console.error('GAS_SCRIPT_ID not set'); process.exit(1); }
+          const id = process.env.GAS_SCRIPT_ID?.trim();
+          if (!id) {
+            console.error('❌ GAS_SCRIPT_ID 未設定或為空');
+            process.exit(1);
+          }
           fs.writeFileSync('.clasp.json', JSON.stringify({ scriptId: id }));
-          console.log('OK .clasp.json written');
-          NODE
+          console.log('✅ 已寫入 .clasp.json (scriptId)');
+          EOF
 
-      - name: Ensure .claspignore
+      - name: 建立 .claspignore 檔案
         run: |
           cat > .claspignore <<'EOF'
           node_modules/**
           .github/**
           .git/**
-          dist/**
-          build/**
-          coverage/**
-          .vscode/**
-          *.map
-          README*
-          LICENSE*
-          *.md
-          scripts/**
-          test/**
-          package.json
-          package-lock.json
-          pnpm-lock.yaml
-          yarn.lock
           EOF
+          echo '✅ 已建立 .claspignore，忽略無關檔案'
 
-      - name: Push code to GAS
+      - name: Push code to GAS (clasp push)
         run: clasp push --force
 
-      - name: Create version & update deployment
+      - name: Create new version
+        run: |
+          # 建立新版本，取得版本號
+          VERSION_DESC="CI auto version $GITHUB_SHA"
+          OUTPUT="$(clasp version "$VERSION_DESC")"
+          echo "$OUTPUT"
+          # 提取版本號數字
+          VER=$(echo "$OUTPUT" | sed -n 's/.*version \([0-9]\+\).*/\1/p')
+          if [ -z "$VER" ]; then
+            echo "::error ::無法解析 Apps Script 版本號"
+            exit 1
+          fi
+          echo "✅ 建立版本成功，version = $VER"
+          echo "VERSION_NUMBER=$VER" >> $GITHUB_ENV
+
+      - name: Update Web App Deployment
         env:
           GAS_DEPLOY_ID: ${{ vars.GAS_DEPLOY_ID }}
+          VER: ${{ env.VERSION_NUMBER }}
         run: |
-          DESC="ci build $GITHUB_SHA"
-          OUT="$(clasp version "$DESC")"
-          echo "$OUT"
-          VER="$(echo "$OUT" | sed -n 's/.*version \([0-9]\+\).*/\1/p')"
-          if [ -z "$VER" ]; then echo "Cannot parse version"; exit 1; fi
-          clasp deploy -i "$GAS_DEPLOY_ID" -V "$VER" -d "$DESC"
+          # 使用現有 deployment ID 部署新版本，保持 URL 不變
+          DEPLOY_DESC="CI deploy $GITHUB_SHA"
+          clasp deploy --deploymentId "$GAS_DEPLOY_ID" --versionNumber "$VER" --description "$DEPLOY_DESC"
+          echo "✅ 已更新部署（ID=$GAS_DEPLOY_ID，版本=$VER）"
 
-      - name: Probe Web App anonymously
+      - name: 匿名請求 Web App (Probe)
         id: probe
         env:
-          URL: ${{ vars.GAS_WEBAPP_URL }}
+          WEBAPP_URL: ${{ vars.GAS_WEBAPP_URL }}
         run: |
-          set +e
-          code=$(curl -s -o resp.txt -w "%{http_code}" -L "$URL")
-          echo "http_code=$code"
-          if [ "$code" -ge 200 ] && [ "$code" -lt 400 ]; then
+          # 嘗試匿名存取 Web App，檢查是否回應 200 OK
+          STATUS=$(curl -s -o /dev/null -w "%{http_code}" "$WEBAPP_URL")
+          echo "HTTP Status=$STATUS"
+          if [ "$STATUS" -ge 200 ] && [ "$STATUS" -lt 400 ]; then
             echo "PROBE_OK=true" >> $GITHUB_ENV
-            head -c 1024 resp.txt || true
-            exit 0
+            echo "匿名存取 Web App 成功 (HTTP $STATUS)"
           else
             echo "PROBE_OK=false" >> $GITHUB_ENV
-            exit 0
+            echo "匿名存取 Web App 未成功，可能需要授權或權限不符 (HTTP $STATUS)"
           fi
 
-      - name: Test Web App with OAuth
+      - name: OAuth 驗證後存取 Web App
         if: env.PROBE_OK == 'false'
         env:
-          URL: ${{ vars.GAS_WEBAPP_URL }}
+          WEBAPP_URL: ${{ vars.GAS_WEBAPP_URL }}
           GAS_OAUTH_CLIENT_ID: ${{ secrets.GAS_OAUTH_CLIENT_ID }}
           GAS_OAUTH_CLIENT_SECRET: ${{ secrets.GAS_OAUTH_CLIENT_SECRET }}
         run: |
-          node <<'NODE'
-          const fs = require('fs'), https = require('https');
-          const cfg = JSON.parse(fs.readFileSync(process.env.HOME+'/.clasprc.json','utf8'));
-          const refresh = cfg.token?.refresh_token || cfg.token?.refreshToken || '';
-          if (!refresh) { console.error('No refresh_token in ~/.clasprc.json'); process.exit(1); }
-          const o = cfg.oauth2ClientSettings || cfg.oauth2 || {};
-          const clientId =
-            process.env.GAS_OAUTH_CLIENT_ID ||
-            o.clientId || o.web?.client_id || o.installed?.client_id ||
-            '1072944905499-vm2v2i5dvn0a0d2o4ca36i1vge8cvbn0.apps.googleusercontent.com';
-          const clientSecret =
-            process.env.GAS_OAUTH_CLIENT_SECRET ||
-            o.clientSecret || o.web?.client_secret || o.installed?.client_secret ||
-            'v6V3fKV_zWU7iw1DrpO1rknX';
-          const body = new URLSearchParams({
-            client_id: clientId, client_secret: clientSecret,
-            refresh_token: refresh, grant_type: 'refresh_token'
-          }).toString();
-          const opt = { hostname:'oauth2.googleapis.com', path:'/token', method:'POST',
-            headers:{ 'Content-Type':'application/x-www-form-urlencoded',
-                      'Content-Length': Buffer.byteLength(body) } };
-          const req = https.request(opt, res => {
-            let buf=''; res.on('data', d=>buf+=d); res.on('end', ()=>{
-              try { const tok = JSON.parse(buf).access_token;
-                if (!tok) throw new Error(buf);
-                fs.writeFileSync('ACCESS_TOKEN', tok);
-                console.log('OK access_token'); }
-              catch(e){ console.error('Token response:', buf); process.exit(1); }
+          # 使用 OAuth Refresh Token 獲取 Access Token 並授權請求 Web App
+          node <<'EOF'
+          const fs = require('fs');
+          const https = require('https');
+          const cfg = JSON.parse(fs.readFileSync(process.env.HOME + '/.clasprc.json', 'utf8'));
+          const refreshToken = cfg.token?.refresh_token || cfg.token?.refreshToken;
+          if (!refreshToken) {
+            console.error('❌ 找不到 refresh_token，請確認 CLASPRC_JSON_B64');
+            process.exit(1);
+          }
+          const clientId = process.env.GAS_OAUTH_CLIENT_ID;
+          const clientSecret = process.env.GAS_OAUTH_CLIENT_SECRET;
+          const params = new URLSearchParams({
+            client_id: clientId,
+            client_secret: clientSecret,
+            refresh_token: refreshToken,
+            grant_type: 'refresh_token'
+          });
+          const options = {
+            hostname: 'oauth2.googleapis.com',
+            path: '/token',
+            method: 'POST',
+            headers: { 'Content-Type': 'application/x-www-form-urlencoded' }
+          };
+          const req = https.request(options, res => {
+            let data = '';
+            res.on('data', chunk => data += chunk);
+            res.on('end', () => {
+              const resObj = JSON.parse(data);
+              if (!resObj.access_token) {
+                console.error('❌ 無法取得 access_token', data);
+                process.exit(1);
+              }
+              fs.writeFileSync('ACCESS_TOKEN', resObj.access_token);
             });
           });
-          req.on('error', e=>{ console.error(e); process.exit(1); });
-          req.write(body); req.end();
-          NODE
+          req.on('error', err => { console.error('❌ OAuth 連線錯誤', err); process.exit(1); });
+          req.write(params.toString());
+          req.end();
+          EOF
+
           ACCESS_TOKEN=$(cat ACCESS_TOKEN)
-          code=$(curl -s -o resp.txt -w "%{http_code}" -L -H "Authorization: Bearer $ACCESS_TOKEN" "$URL")
-          echo "http_code=$code"
-          head -c 1024 resp.txt || true
-          test "$code" -ge 200 -a "$code" -lt 400
+          STATUS=$(curl -s -o /dev/null -w "%{http_code}" -H "Authorization: Bearer $ACCESS_TOKEN" "$WEBAPP_URL")
+          echo "Authenticated HTTP Status=$STATUS"
+          if [ "$STATUS" -ge 200 ] && [ "$STATUS" -lt 400 ]; then
+            echo "✅ OAuth 授權後存取 Web App 成功 (HTTP $STATUS)"
+          else
+            echo "::error ::即使使用 OAuth，Web App 回應碼仍非 2XX (HTTP $STATUS)。"
+            exit 1
+          fi
